--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.4",
+    "alpinejs": "^3.3.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
